--- a/functions/package.json
+++ b/functions/package.json
@@ -9,16 +9,18 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "18"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
+    "@google-cloud/functions-framework": "^3.4.2",
     "cors-anywhere": "^0.4.4",
-    "firebase-admin": "^11.0.1",
-    "firebase-functions": "^4.4.1"
+    "firebase-admin": "^12.7.0",
+    "firebase-functions": "^6.1.0"
   },
   "devDependencies": {
-    "firebase-functions-test": "^0.2.0"
+    "firebase-functions-test": "^3.3.0"
   },
-  "private": true
+  "private": true,
+  "packageManager": "pnpm@9.12.3+sha512.cce0f9de9c5a7c95bef944169cc5dfe8741abfb145078c0d508b868056848a87c81e626246cb60967cbd7fd29a6c062ef73ff840d96b3c86c40ac92cf4a813ee"
 }
